@startuml UseCaseDiagram
left to right direction
skinparam packageStyle rectangle

actor Student as "Student / User"

rectangle "Smart Study Assistant" {
  usecase "Manage Study Notes" as UC1
  usecase "Extract Text from Images (OCR)" as UC2
  usecase "Generate AI Summaries" as UC3
  usecase "Auto-Infer Note Category" as UC4
  usecase "Manage Flashcards" as UC5
  usecase "Practice Flashcards (Shuffle/Flip)" as UC6
  usecase "View Study Statistics & Progress" as UC7
}

Student --> UC1
Student --> UC2
Student --> UC3
Student --> UC5
Student --> UC6
Student --> UC7

UC3 ..> UC4 : <<include>>
UC1 <.. UC3 : <<extend>>
UC5 <.. UC3 : <<extend>>

@enduml

@startuml HighLevelArchitecture
!define RECTANGLE class

package "Frontend (Flutter Mobile App)" {
  [UI Layer\n(Pages & Widgets)] as UI
  [Business Logic\n(State Management)] as BLoC
  [Service Layer\n(API Wrappers)] as Services
  [Data Models] as Models

  UI --> BLoC
  BLoC --> Services
  Services --> Models
}

cloud "External Services" {
  [Google Gemini API] as Gemini
  [Google ML Kit (On-Device)] as MLKit
}

database "Backend (Firebase)" {
  [Firebase Auth] as Auth
  [Cloud Firestore] as Firestore
  [Firebase Storage] as Storage
}

Services --> Gemini : "Summarization"
Services --> MLKit : "OCR Text Extraction"
Services --> Auth : "Authentication"
Services --> Firestore : "Data Storage & Stats"
Services --> Storage : "Image Persistence"

@enduml

@startuml ERDiagram
' Entity Relationship Diagram for Smart Study Assistant

entity "User" as user {
  * id : string <<PK>>
  --
  name : string
  email : string
  createdAt : timestamp
}

entity "Note" as note {
  * id : string <<PK>>
  --
  * userId : string <<FK>>
  title : string
  content : text
  category : string
  hasImage : boolean
  imageUrl : string
  createdAt : timestamp
  updatedAt : timestamp
}

entity "Flashcard" as flashcard {
  * id : string <<PK>>
  --
  * userId : string <<FK>>
  noteId : string <<FK>>
  question : text
  answer : text
  category : string
  difficulty : int
  timesReviewed : int
  lastReviewed : timestamp
  isMarked : boolean
  createdAt : timestamp
  updatedAt : timestamp
}

entity "StudyStats" as stats {
  * id : string <<PK>> (usually 'overview')
  --
  * userId : string <<FK>>
  totalNotes : int
  totalSummaries : int
  totalFlashcards : int
  totalStudyTime : int (minutes)
  updatedAt : timestamp
}

entity "DailyStudyData" as daily {
  * date : string <<PK>> (YYYY-MM-DD)
  --
  * userId : string <<FK>>
  studyTimeMinutes : int
  cardsReviewed : int
  notesCreated : int
}

user ||--o{ note : "creates"
user ||--o{ flashcard : "owns"
user ||--|| stats : "has"
user ||--o{ daily : "tracks activity"
note ||--o{ flashcard : "source of"

@enduml
